# rustlang-agents-template

./: .env.example  .gitignore  Cargo.toml  GEMINI.md
src/: main.rs  state.rs
src/agents/: mod.rs
src/agents/orchestrator/: mod.rs  system_prompt.md
src/agents/specialized/: mod.rs
src/agents/specialized/address/: mod.rs  system_prompt.md
src/agents/specialized/damage/: mod.rs  system_prompt.md
src/agents/specialized/dummy/: mod.rs  system_prompt.md
src/api/: handlers.rs  mod.rs  request.rs  routes.rs
src/infra/: llm.rs  mod.rs  telemetry.rs
src/tools/global/: mod.rs
